# soylent-recipes

./: .coveragerc  .gitignore  MANIFEST.in  README.md  README.rst  dev_requirements.in  genindex.html  history.html  ideas.html  index.html  objects.inv  project.py  recipes_history.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.in  user_guide.html
_sources/: index.rst.txt
data/: combos.txt  count.py  create.sh  create_db.sql  out  sanitise.sql
data/usda_sr26/: .convert_to_sql.sh.swp  ABBREV.txt  convert_to_sql.sh
docs/: Makefile  conf.py  developer_documentation.rst  history.rst  ideas.rst  index.rst  results.txt  user_documentation.rst  user_guide.rst
file/: clustering_depth37.newick
soylent_recipes/: __init__.py  cluster.py  config.py  foods.py  main.py  miner.py  nutrition_target.py  solver.py  tree.py  various.py
soylent_recipes/tests/: mocks.py  (+10 more)
src/: CMakeLists.txt  FindALGLIB.cmake  FindOpenBeagle.cmake  beagle.conf
src/soylentrecipes/: Food.cpp  Food.h  Nutrient.cpp  Nutrient.h  NutrientProfile.h  README  RecipeMiner.cpp  RecipeMiner.h  RecipeProblem.cpp  RecipeProblem.h  foodclusterer.h  main.cpp  tests.cpp  tests.h
src/soylentrecipes/clustering/: ClusterByCLTree.h  ClusterByDecisionTree.h  ClusterByOrthogonality.h  Clustering.cpp  Clustering.h  KMeansClustering.h  util.h
src/soylentrecipes/data_access/: Database.cpp  Database.h  FoodDatabase.cpp  FoodDatabase.h  Query.cpp  Query.h
src/soylentrecipes/domain/: Food.cpp  Food.h  FoodNotFoundException.h  Foods.cpp  Foods.h  Nutrient.cpp  Nutrient.h  NutrientProfile.cpp  NutrientProfile.h  NutrientProfiles.cpp  NutrientProfiles.h  Recipes.cpp  Recipes.h
src/soylentrecipes/genetic/: FoodGenotype.cpp  FoodGenotype.h  Foods.h  RecipeContext.cpp  RecipeContext.h  RecipeCrossoverOp.cpp  RecipeCrossoverOp.h  RecipeEvalOp.cpp  RecipeEvalOp.h  RecipeFitness.h  RecipeIndividual.cpp  RecipeIndividual.h  RecipeInitializationOp.cpp  RecipeInitializationOp.h  RecipeMutationOp.cpp  RecipeMutationOp.h
src/soylentrecipes/mining/: RecipeMiner.cpp  RecipeMiner.h  RecipeProblem.cpp  RecipeProblem.h
(+13 files in other folders)
